--- a/index.html
+++ b/index.html
@@ -24,7 +24,25 @@
             <div class="search">
                 <input class="srch" type="search" placeholder="Type to text">
                 <a href="#"><button class="btn">Search</button></a>
+            </div>    
         </div>
+        <div class="content">
+            <h1>Welcome to <br><span>PureCheck</span><br>Laboratories</h1>
+            <p class="par">Your one-stop solution for all research needs <br>A laboratory is a facility that provides controlled conditions <br> in which scientific or technological research, experiments, 
+                <br> and measurement may be performed.</p>
+            <button class="cn"><a href="#">Join Us</a></button>
+
+            <div class="form">
+                <h2>Login Here</h2>
+                <input type="email" name="email" placeholder="Enter Email Here">
+                <input type="password" name="" placeholder="Enter Password Here">
+                <button class="btn"><a href="#">Login</a></button>
+
+                <p class="link">Don't have an account?</p>
+                <a href="#">Sign up here</a>
+                <p class="liw">Log in with</p>
+            </div>
+        </div> 
     </div>
 </body>
 </html>
